Database connection + Create Tables

--- a/MyWorkBoard/appsettings.Development.json
+++ b/MyWorkBoard/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MyWorkBoardConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MyWorkBoardDB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
